docs/0.14.2/_sources/api/gwpy.spectrogram.Spectrogram.rst.txt


Spectrogram
============================

.. currentmodule:: gwpy.spectrogram

.. autoclass:: Spectrogram
   :no-inherited-members:

   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~Spectrogram.T
      ~Spectrogram.band
      ~Spectrogram.base
      ~Spectrogram.cgs
      ~Spectrogram.channel
      ~Spectrogram.ctypes
      ~Spectrogram.data
      ~Spectrogram.df
      ~Spectrogram.dt
      ~Spectrogram.dtype
      ~Spectrogram.dx
      ~Spectrogram.dy
      ~Spectrogram.epoch
      ~Spectrogram.equivalencies
      ~Spectrogram.f0
      ~Spectrogram.flags
      ~Spectrogram.flat
      ~Spectrogram.frequencies
      ~Spectrogram.imag
      ~Spectrogram.info
      ~Spectrogram.isscalar
      ~Spectrogram.itemsize
      ~Spectrogram.name
      ~Spectrogram.nbytes
      ~Spectrogram.ndim
      ~Spectrogram.real
      ~Spectrogram.shape
      ~Spectrogram.si
      ~Spectrogram.size
      ~Spectrogram.span
      ~Spectrogram.strides
      ~Spectrogram.t0
      ~Spectrogram.times
      ~Spectrogram.unit
      ~Spectrogram.value
      ~Spectrogram.x0
      ~Spectrogram.xindex
      ~Spectrogram.xspan
      ~Spectrogram.xunit
      ~Spectrogram.y0
      ~Spectrogram.yindex
      ~Spectrogram.yspan
      ~Spectrogram.yunit

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~Spectrogram.abs
      ~Spectrogram.all
      ~Spectrogram.any
      ~Spectrogram.append
      ~Spectrogram.argmax
      ~Spectrogram.argmin
      ~Spectrogram.argpartition
      ~Spectrogram.argsort
      ~Spectrogram.astype
      ~Spectrogram.byteswap
      ~Spectrogram.choose
      ~Spectrogram.clip
      ~Spectrogram.compress
      ~Spectrogram.conj
      ~Spectrogram.conjugate
      ~Spectrogram.copy
      ~Spectrogram.crop
      ~Spectrogram.crop_frequencies
      ~Spectrogram.cumprod
      ~Spectrogram.cumsum
      ~Spectrogram.decompose
      ~Spectrogram.diagonal
      ~Spectrogram.diff
      ~Spectrogram.dot
      ~Spectrogram.dump
      ~Spectrogram.dumps
      ~Spectrogram.ediff1d
      ~Spectrogram.fill
      ~Spectrogram.filter
      ~Spectrogram.flatten
      ~Spectrogram.from_spectra
      ~Spectrogram.getfield
      ~Spectrogram.imshow
      ~Spectrogram.inject
      ~Spectrogram.insert
      ~Spectrogram.is_compatible
      ~Spectrogram.is_contiguous
      ~Spectrogram.item
      ~Spectrogram.itemset
      ~Spectrogram.max
      ~Spectrogram.mean
      ~Spectrogram.median
      ~Spectrogram.min
      ~Spectrogram.nansum
      ~Spectrogram.newbyteorder
      ~Spectrogram.nonzero
      ~Spectrogram.override_unit
      ~Spectrogram.pad
      ~Spectrogram.partition
      ~Spectrogram.pcolormesh
      ~Spectrogram.percentile
      ~Spectrogram.plot
      ~Spectrogram.prepend
      ~Spectrogram.prod
      ~Spectrogram.ptp
      ~Spectrogram.put
      ~Spectrogram.ratio
      ~Spectrogram.ravel
      ~Spectrogram.read
      ~Spectrogram.repeat
      ~Spectrogram.reshape
      ~Spectrogram.resize
      ~Spectrogram.round
      ~Spectrogram.searchsorted
      ~Spectrogram.setfield
      ~Spectrogram.setflags
      ~Spectrogram.shift
      ~Spectrogram.sort
      ~Spectrogram.squeeze
      ~Spectrogram.std
      ~Spectrogram.step
      ~Spectrogram.sum
      ~Spectrogram.swapaxes
      ~Spectrogram.take
      ~Spectrogram.to
      ~Spectrogram.tobytes
      ~Spectrogram.tofile
      ~Spectrogram.tolist
      ~Spectrogram.tostring
      ~Spectrogram.trace
      ~Spectrogram.transpose
      ~Spectrogram.update
      ~Spectrogram.value_at
      ~Spectrogram.var
      ~Spectrogram.variance
      ~Spectrogram.view
      ~Spectrogram.write
      ~Spectrogram.zip
      ~Spectrogram.zpk

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: T
   .. autoattribute:: band
   .. autoattribute:: base
   .. autoattribute:: cgs
   .. autoattribute:: channel
   .. autoattribute:: ctypes
   .. autoattribute:: data
   .. autoattribute:: df
   .. autoattribute:: dt
   .. autoattribute:: dtype
   .. autoattribute:: dx
   .. autoattribute:: dy
   .. autoattribute:: epoch
   .. autoattribute:: equivalencies
   .. autoattribute:: f0
   .. autoattribute:: flags
   .. autoattribute:: flat
   .. autoattribute:: frequencies
   .. autoattribute:: imag
   .. autoattribute:: info
   .. autoattribute:: isscalar
   .. autoattribute:: itemsize
   .. autoattribute:: name
   .. autoattribute:: nbytes
   .. autoattribute:: ndim
   .. autoattribute:: real
   .. autoattribute:: shape
   .. autoattribute:: si
   .. autoattribute:: size
   .. autoattribute:: span
   .. autoattribute:: strides
   .. autoattribute:: t0
   .. autoattribute:: times
   .. autoattribute:: unit
   .. autoattribute:: value
   .. autoattribute:: x0
   .. autoattribute:: xindex
   .. autoattribute:: xspan
   .. autoattribute:: xunit
   .. autoattribute:: y0
   .. autoattribute:: yindex
   .. autoattribute:: yspan
   .. autoattribute:: yunit

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: abs
   .. automethod:: all
   .. automethod:: any
   .. automethod:: append
   .. automethod:: argmax
   .. automethod:: argmin
   .. automethod:: argpartition
   .. automethod:: argsort
   .. automethod:: astype
   .. automethod:: byteswap
   .. automethod:: choose
   .. automethod:: clip
   .. automethod:: compress
   .. automethod:: conj
   .. automethod:: conjugate
   .. automethod:: copy
   .. automethod:: crop
   .. automethod:: crop_frequencies
   .. automethod:: cumprod
   .. automethod:: cumsum
   .. automethod:: decompose
   .. automethod:: diagonal
   .. automethod:: diff
   .. automethod:: dot
   .. automethod:: dump
   .. automethod:: dumps
   .. automethod:: ediff1d
   .. automethod:: fill
   .. automethod:: filter
   .. automethod:: flatten
   .. automethod:: from_spectra
   .. automethod:: getfield
   .. automethod:: imshow
   .. automethod:: inject
   .. automethod:: insert
   .. automethod:: is_compatible
   .. automethod:: is_contiguous
   .. automethod:: item
   .. automethod:: itemset
   .. automethod:: max
   .. automethod:: mean
   .. automethod:: median
   .. automethod:: min
   .. automethod:: nansum
   .. automethod:: newbyteorder
   .. automethod:: nonzero
   .. automethod:: override_unit
   .. automethod:: pad
   .. automethod:: partition
   .. automethod:: pcolormesh
   .. automethod:: percentile
   .. automethod:: plot
   .. automethod:: prepend
   .. automethod:: prod
   .. automethod:: ptp
   .. automethod:: put
   .. automethod:: ratio
   .. automethod:: ravel
   .. automethod:: read
   .. automethod:: repeat
   .. automethod:: reshape
   .. automethod:: resize
   .. automethod:: round
   .. automethod:: searchsorted
   .. automethod:: setfield
   .. automethod:: setflags
   .. automethod:: shift
   .. automethod:: sort
   .. automethod:: squeeze
   .. automethod:: std
   .. automethod:: step
   .. automethod:: sum
   .. automethod:: swapaxes
   .. automethod:: take
   .. automethod:: to
   .. automethod:: tobytes
   .. automethod:: tofile
   .. automethod:: tolist
   .. automethod:: tostring
   .. automethod:: trace
   .. automethod:: transpose
   .. automethod:: update
   .. automethod:: value_at
   .. automethod:: var
   .. automethod:: variance
   .. automethod:: view
   .. automethod:: write
   .. automethod:: zip
   .. automethod:: zpk

   
   